<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterByeMessageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/byeMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/enterMessageET"
        android:hint="@string/byeMessageET"
        android:textSize="12sp"
        android:inputType="text"
        android:layout_width="226dp"
        android:layout_height="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterByeMessageTV" />

    <TextView
        android:id="@+id/numberRepsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberRepetitions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterMessageET"
        app:layout_constraintVertical_bias="0.17" />

    <EditText
        android:id="@+id/enterRepetitionsET"
        android:layout_width="226dp"
        android:layout_height="34dp"
        android:textSize="12sp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberRepsTV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/goToByeScreenBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/byeScreenButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterRepetitionsET"
        app:layout_constraintVertical_bias="0.057" />

</androidx.constraintlayout.widget.ConstraintLayout>